# anima_solver

./: Cargo.toml
benches/: bench.rs
puzzles/: 1.1-line_dance.txt  1.2-u_turn.txt  1.3-spiral.txt  2.1-single_file.txt  2.2-oblique.txt  2.3-cycle.txt  2.4-octothorpe.txt  2.5-square_dance.txt  2.6-centralize.txt  3.1-unwind.txt  3.10-box_step.txt  3.11-inversion.txt  3.12-free_radical.txt  3.13-side_channel.txt  3.14-antiparticle.txt  3.2-spinlock.txt  3.3-gimbal_lock.txt  3.4-deadlock.txt  3.5-sideswipe.txt  3.6-untangle.txt  3.7-traffic_circle.txt  3.8-close_quarters.txt  3.9-fractal.txt  line_dance.txt  u_turn.txt
src/: direction.rs  lib.rs  main.rs  puzzle.rs  solve.rs  vec2.rs
