[package]
name = "anima_solver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]
arrayvec = "0.7"

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true
